--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Demo",
   "version": "0.0.1",
-  "packageManager": "yarn@4.9.1",
+  "packageManager": "yarn@4.10.3",
   "private": true,
   "scripts": {
     "next:dev": "next dev --turbopack",
@@ -13,22 +13,22 @@
     "app:dev": "yarn api:run & yarn next:dev"
   },
   "dependencies": {
-    "@apollo/server": "^4.12.0",
+    "@apollo/server": "^5.0.0",
     "graphql": "^16.11.0",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^15.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
-    "tsx": "^4.19.4",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@types/node": "^24.9.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^15.5.6",
+    "tailwindcss": "^4.1.15",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
