--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@ui/*": ["./src/*"],
+      "@api/*": ["./api/*"]
     }
   },
   "include": [
