--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
       }
     ],
     "paths": {
-      "@ui/*": ["./src/*"],
-      "@api/*": ["./api/*"]
+      "@/*": ["./src/*"],
+      "@gql/*": ["./api/*"]
     }
   },
   "include": [
